fixed spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -103,6 +103,7 @@ h4  {
   margin-right: -0.7%;
   height: 80vh;
   z-index: 1;
+  padding-top: 11%;
 }
 
 .mainContent p {
@@ -171,7 +172,7 @@ border: none;
 
 .header {
     top: 1%;
-    left: 25%;
+    left: 23%;
     text-align: center;
     text-shadow: 2px 2px 6px black;
 }
@@ -247,7 +248,7 @@ and (max-device-width : 736px) {
 
 .header {
     top: 1%;
-    left: 25%;
+    left: 23%;
       text-align: center;
     text-shadow: 2px 2px 6px black;
 }
