--- a/app/assets/stylesheets/health_pages.scss
+++ b/app/assets/stylesheets/health_pages.scss
@@ -28,7 +28,8 @@ transition-duration: 1s;
 .background {
   background-image: url("/fountain.gif");
   background-size: contain;
-  height: 70vh;
+  height: 75vh;
+  margin-top: -2%;
   background-position: top;
 }
 
